--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.19.0",
+    "prop-types": "^15.7.2",
+    "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "npm run build:css && react-scripts start",
@@ -33,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/ui": "^0.5.0",
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.7.3"
